# repo-generator

./: .gitignore  README.md  pyproject.toml  settings.toml
repo_generator/: __init__.py  cli.py  config_loader.py
repo_generator/creator/: __init__.py  challenge_creator.py
repo_generator/github/: __init__.py  git.py
repo_generator/io/: __init__.py  io.py
repo_generator/source_cotrol/: __init__.py  git.py  github.py
tests/: test_git.py  test_github.py  test_intagration.py  test_io.py  utils.py
