[tool.poetry]
name = "repo-generator"
version = "0.1.0"
description = ""
authors = ["Jahel <jleonro@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygithub = "2.1.1"
click = "8.1.7"
gitpython = "^3.1.40"


[tool.poetry.group.dev.dependencies]
ruff = "0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
